--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#ffffff" />
-  <!--
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#000000" />
+    <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -20,14 +20,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=e62d2015-f83b-49d5-a267-6a3d74ba594e&lang=ru_RU" type="text/javascript"></script>
-  <title>FunBox Test Task</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=e62d2015-f83b-49d5-a267-6a3d74ba594e&lang=ru_RU" type="text/javascript"></script>
+    <title>React App</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/jasmine/lib/jasmine-2.1.2/jasmine.css">
+
+    <script src="%PUBLIC_URL%/jasmine/lib/jasmine-2.1.2/jasmine.js"></script>
+    <script src="%PUBLIC_URL%/jasmine/lib/jasmine-2.1.2/jasmine-html.js"></script>
+    <script src="%PUBLIC_URL%/jasmine/lib/jasmine-2.1.2/boot.js"></script>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -37,6 +43,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="%PUBLIC_URL%/jasmine/spec/tests.js"></script>
 </body>
 
 </html>
